[gd_scene load_steps=2 format=2]

[ext_resource path="res://source/menus/subMenus/VideoMenu.gd" type="Script" id=1]

[node name="VideoMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="FullScreenCheckBox" type="CheckBox" parent="."]
margin_left = 123.473
margin_top = 80.0904
margin_right = 217.473
margin_bottom = 104.09
text = "Fullscreen"

[node name="ResetButton" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -20.0
margin_right = 103.0
text = "Reset settings"
